[gd_scene load_steps=10 format=3 uid="uid://b7hsjcyltsejy"]

[ext_resource type="Script" uid="uid://0qh67yay5bi1" path="res://ui/minigame_list/CollectionItem.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cmvmqjwssraau" path="res://assets/fonts/Commando/commando.ttf" id="2"]
[ext_resource type="FontFile" uid="uid://51vlffimyv6j" path="res://assets/fonts/bungee/Bungee-Regular.otf" id="3"]
[ext_resource type="PackedScene" uid="uid://mjjon1epk4qn" path="res://godot4/effects/Shadow.tscn" id="4"]
[ext_resource type="PackedScene" path="res://ui/minigame_list/MinigameMinilogo.tscn" id="5"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="CollectionItem" type="ColorRect"]
offset_left = -3.0
offset_right = 942.0
offset_bottom = 720.0
custom_minimum_size = Vector2(0, 130)
size_flags_horizontal = 3
color = Color(0, 0, 0, 0)
script = ExtResource("1")
MinigameMinilogoScene = ExtResource("5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogoContainer" type="Control" parent="HBoxContainer"]
offset_right = 170.0
offset_bottom = 720.0
custom_minimum_size = Vector2(170, 120)

[node name="Logo" type="Sprite2D" parent="HBoxContainer/LogoContainer"]
position = Vector2(80, 60)
scale = Vector2(0.4, 0.4)

[node name="Shadow" parent="HBoxContainer/LogoContainer/Logo" instance=ExtResource("4")]
self_modulate = Color(0, 0, 0, 0.501961)
position = Vector2(-200, -150)
sprite = NodePath("..")

[node name="Texts" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 174.0
offset_right = 814.0
offset_bottom = 720.0
custom_minimum_size = Vector2(640, 0)
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Texts"]
offset_top = 324.0
offset_right = 640.0
offset_bottom = 367.0

[node name="Title" type="Label" parent="HBoxContainer/Texts/HBoxContainer"]
modulate = Color(1, 0.870588, 0.372549, 1)
offset_bottom = 43.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = SubResource("1")

[node name="PlayerCount" type="RichTextLabel" parent="HBoxContainer/Texts/HBoxContainer"]
modulate = Color(0.784314, 1, 0.74902, 1)
offset_left = 4.0
offset_right = 104.0
offset_bottom = 43.0
custom_minimum_size = Vector2(100, 0)
size_flags_vertical = 3
theme_override_fonts/normal_font = SubResource("5")
bbcode_enabled = true
text = "[center]1234[/center]"
text = "1234"

[node name="Wrapper" type="Node2D" parent="HBoxContainer/Texts/HBoxContainer"]
position = Vector2(8, -23)

[node name="Winter" type="Label" parent="HBoxContainer/Texts/HBoxContainer/Wrapper"]
modulate = Color(0.615686, 0.921569, 1, 1)
offset_left = -8.0
offset_top = 1.0
offset_right = 66.0
offset_bottom = 44.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("6")
text = "Winter"

[node name="Description" type="Label" parent="HBoxContainer/Texts"]
offset_top = 371.0
offset_right = 640.0
offset_bottom = 396.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = SubResource("2")
